--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2020-04-17 20:18:32
- * @LastEditTime: 2020-04-17 20:35:43
+ * @LastEditTime: 2020-04-18 09:08:40
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \JavaScript\Demo\Canvas彩虹漩涡\index.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas彩虹漩涡</title>
-    <link rel="icon" href="./HTSCIT_研究.png">
+    <link rel="icon" href="./src/HTSCIT_研究.png">
     <style>
         body,
         html {
@@ -32,69 +32,7 @@
 <body>
 
     <canvas id="canvas"></canvas>
-
-    <script>
-        // 初始变量
-        let canvas, ctx, w, h
-
-        // 集合站
-        let setup = () => {
-            canvas = document.querySelector('#canvas')
-            ctx = canvas.getContext('2d')
-            reset()
-            window.addEventListener('resize', () => {
-                reset()
-                draw()
-            })
-            canvas.addEventListener('click', draw)
-        }
-
-        // 获取边框属性
-        let reset = () => {
-            w = canvas.width = window.innerWidth
-            h = canvas.height = window.innerHeight
-            ctx.lineWidth = 4
-        }
-
-        // 逻辑函数
-        let draw = () => {
-            // float(0~360)
-            let hueOffset = Math.random() * 360
-            ctx.fillRect(0, 0, w, h)
-            let nrOfLines = 2500
-            let deltaAngle = Math.PI * 2 / nrOfLines
-            ctx.save()
-            ctx.translate(w / 2, h / 2)
-            let a = w / 2, b = h / 2, c = Math.sqrt(a * a + b * b) * 1.05
-            for (let i = 0; i < nrOfLines; i++) {
-                let angle = i * deltaAngle;
-                let x = Math.cos(angle) * c;
-                let y = Math.sin(angle) * c;
-                let cp1x = Math.cos(angle + 1.6) * c * 0.15;
-                let cp1y = Math.sin(angle + 1.6) * c * 0.15;
-                let cp2x = Math.cos(angle + 0.5) * c * 0.65;
-                let cp2y = Math.sin(angle + 0.5) * c * 0.65;
-                let hue = 180 * angle / Math.PI + hueOffset;
-                let l = Math.random() * 40 + 40;
-                ctx.strokeStyle = `hsla(${hue}, 90%, ${l}%, 0.6)`;
-                ctx.beginPath();
-                ctx.moveTo(0, 0);
-                ctx.bezierCurveTo(cp1x, cp1y, cp2x, cp2y, x, y);
-                ctx.stroke();
-            }
-            ctx.restore()
-        }
-
-        (function () {
-            setInterval(function () {
-                setup()
-                draw()
-                clearInterval()
-            }, 100)
-        })()
-
-
-    </script>
+    <script src="./dist/index.js"></script>
 
 </body>
 
